SJSU_Dev/projects/.metadata/.plugins/org.eclipse.cdt.ui/Interrupts_Semaphores_Lookup.build.log
15:42:53 **** Incremental Build of configuration _build for project Interrupts_Semaphores_Lookup ****
make -j2 all 
Building file: ../L5_Application/mainExtraCredit.cpp
Invoking: Cross ARM C++ Compiler
arm-none-eabi-g++ -mcpu=cortex-m3 -mthumb -Os -fmessage-length=0 -ffunction-sections -fdata-sections -Wall -Wshadow -Wlogical-op -Wfloat-equal -DBUILD_CFG_MPU=0 -I"C:\CMPE146\CMPE-146\SJSU_Dev\projects\Interrupts_Semaphores_Lookup" -I"C:\CMPE146\CMPE-146\SJSU_Dev\projects\Interrupts_Semaphores_Lookup\newlib" -I"C:\CMPE146\CMPE-146\SJSU_Dev\projects\Interrupts_Semaphores_Lookup\L0_LowLevel" -I"C:\CMPE146\CMPE-146\SJSU_Dev\projects\Interrupts_Semaphores_Lookup\L1_FreeRTOS" -I"C:\CMPE146\CMPE-146\SJSU_Dev\projects\Interrupts_Semaphores_Lookup\L1_FreeRTOS\include" -I"C:\CMPE146\CMPE-146\SJSU_Dev\projects\Interrupts_Semaphores_Lookup\L1_FreeRTOS\portable" -I"C:\CMPE146\CMPE-146\SJSU_Dev\projects\Interrupts_Semaphores_Lookup\L1_FreeRTOS\portable\no_mpu" -I"C:\CMPE146\CMPE-146\SJSU_Dev\projects\Interrupts_Semaphores_Lookup\L2_Drivers" -I"C:\CMPE146\CMPE-146\SJSU_Dev\projects\Interrupts_Semaphores_Lookup\L2_Drivers\base" -I"C:\CMPE146\CMPE-146\SJSU_Dev\projects\Interrupts_Semaphores_Lookup\L3_Utils" -I"C:\CMPE146\CMPE-146\SJSU_Dev\projects\Interrupts_Semaphores_Lookup\L3_Utils\tlm" -I"C:\CMPE146\CMPE-146\SJSU_Dev\projects\Interrupts_Semaphores_Lookup\L4_IO" -I"C:\CMPE146\CMPE-146\SJSU_Dev\projects\Interrupts_Semaphores_Lookup\L4_IO\fat" -I"C:\CMPE146\CMPE-146\SJSU_Dev\projects\Interrupts_Semaphores_Lookup\L4_IO\wireless" -I"C:\CMPE146\CMPE-146\SJSU_Dev\projects\Interrupts_Semaphores_Lookup\L5_Application" -std=gnu++11 -fabi-version=0 -fno-exceptions -MMD -MP -MF"L5_Application/mainExtraCredit.d" -MT"L5_Application/mainExtraCredit.o" -c -o "L5_Application/mainExtraCredit.o" "../L5_Application/mainExtraCredit.cpp"
../L5_Application/mainExtraCredit.cpp:79:62: error: no matching function for call to 'params::params(int, int, bool, bool)'
 static const params *pExternal1 = params(2,1,sw_number1,false);
                                                              ^
../L5_Application/mainExtraCredit.cpp:60:16: note: candidate: params::params()
 typedef struct params {
                ^
../L5_Application/mainExtraCredit.cpp:60:16: note:   candidate expects 0 arguments, 4 provided
../L5_Application/mainExtraCredit.cpp:60:16: note: candidate: constexpr params::params(const params&)
../L5_Application/mainExtraCredit.cpp:60:16: note:   candidate expects 1 argument, 4 provided
../L5_Application/mainExtraCredit.cpp:60:16: note: candidate: constexpr params::params(params&&)
../L5_Application/mainExtraCredit.cpp:60:16: note:   candidate expects 1 argument, 4 provided
../L5_Application/mainExtraCredit.cpp: In function 'void vLEDCounter(void*)':
../L5_Application/mainExtraCredit.cpp:163:10: warning: unused variable 'success' [-Wunused-variable]
     bool success = ledDisplay.init();
          ^
../L5_Application/mainExtraCredit.cpp: At global scope:
../L5_Application/mainExtraCredit.cpp:79:22: warning: 'pExternal1' defined but not used [-Wunused-variable]
 static const params *pExternal1 = params(2,1,sw_number1,false);
                      ^
make: *** [L5_Application/mainExtraCredit.o] Error 1

15:42:53 Build Finished (took 638ms)

